fixed the alignment issues

--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -2,9 +2,10 @@ $sub-color: grey;
 $main-color: black;
 
 @mixin shrinkLabel {
-  top: -14px;
+  top: -5px;
   font-size: 12px;
   color: $main-color;
+  background-color: white;
 }
 
 .form-input-group {
@@ -14,14 +15,14 @@ $main-color: black;
   .form-input {
     background: none;
     background-color: white;
-    color: $sub-color;
-    font-size: 18px;
-    padding: 10px 10px 10px 5px;
+    color: $main-color;
+    font-size: 16px;
+    padding: 10px 10px 10px 10px;
     display: block;
     width: 100%;
     border: none;
     border-radius: 0;
-    border-bottom: 1px solid $sub-color;
+    border: 1px solid lighten($sub-color, 30%);
     margin: 25px 0;
 
     &:focus {
@@ -39,12 +40,13 @@ $main-color: black;
 
   .form-input-label {
     color: $sub-color;
-    font-size: 16px;
+    font-size: 1.6rem;
     font-weight: normal;
+    padding: 0;
     position: absolute;
     pointer-events: none;
-    left: 5px;
-    top: 10px;
+    left: 13px;
+    top: 12px;
     transition: 300ms ease all;
 
     &.shrink {
